# stock-strat

./: .gitignore  README.md  pyproject.toml
data/: portfolio_2330.csv
notebooks/: 01_2317_rsi.ipynb
src/stock_strat/: __init__.py  __main__.py  backtest.py  clean.py  cli.py  config.py  features.py  metrics.py  pipeline.py  strategy.py  stress.py  walkforward.py
src/stock_strat/data/: __init__.py  finmind.py  yahoo.py
tests/: test_backtest.py  test_clean.py  test_features.py
